tests/patching/errors/replace_negative_offset.dby
import std.buffer as buf
let b = buf.new(1)
buf.replace(b, -1, b"\x00")
